@@ -1166,11 +1166,11 @@ a{
     outline:0; }
 
 .button.button-secondary{
-  color:black;
+  color:#111111;
   background-color:#f0f0f0;
   border-color:#e3e3e3; }
   .button.button-secondary:hover, .button.button-secondary:focus{
-    color:black;
+    color:#111111;
     background-color:#d7d7d7;
     border-color:#cacaca;
     outline:0; }
@@ -1401,10 +1401,10 @@ blockquote{
   color:white; }
 
 .b-black{
-  background-color:black; }
+  background-color:#111111; }
 
 .c-black{
-  color:black; }
+  color:#111111; }
 
 .b-primary{
   background-color:#33c3f0; }
@@ -1417,6 +1417,132 @@ blockquote{
 
 .c-secondary{
   color:#f0f0f0; }
+
+.b-aqua{
+  background-color:#7fdbff; }
+
+.c-aqua{
+  color:#7fdbff; }
+
+.b-blue{
+  background-color:#0074d9; }
+
+.c-blue{
+  color:#0074d9; }
+
+.b-navy{
+  background-color:#001f3f; }
+
+.c-navy{
+  color:#001f3f; }
+
+.b-teal{
+  background-color:#39cccc; }
+
+.c-teal{
+  color:#39cccc; }
+
+.b-green{
+  background-color:#2ecc40; }
+
+.c-green{
+  color:#2ecc40; }
+
+.b-olive{
+  background-color:#3d9970; }
+
+.c-olive{
+  color:#3d9970; }
+
+.b-lime{
+  background-color:#01ff70; }
+
+.c-lime{
+  color:#01ff70; }
+
+.b-yellow{
+  background-color:#ffdc00; }
+
+.c-yellow{
+  color:#ffdc00; }
+
+.b-orange{
+  background-color:#ff851b; }
+
+.c-orange{
+  color:#ff851b; }
+
+.b-red{
+  background-color:#ff4136; }
+
+.c-red{
+  color:#ff4136; }
+
+.b-fuchsia{
+  background-color:#f012be; }
+
+.c-fuchsia{
+  color:#f012be; }
+
+.b-purple{
+  background-color:#b10dc9; }
+
+.c-purple{
+  color:#b10dc9; }
+
+.b-maroon{
+  background-color:#85144b; }
+
+.c-maroon{
+  color:#85144b; }
+
+.b-silver{
+  background-color:#dddddd; }
+
+.c-silver{
+  color:#dddddd; }
+
+.b-gray{
+  background-color:#aaaaaa; }
+
+.c-gray{
+  color:#aaaaaa; }
+
+.b-facebook{
+  background-color:#3b5999; }
+
+.c-facebook{
+  color:#3b5999; }
+
+.b-twitter{
+  background-color:#55acee; }
+
+.c-twitter{
+  color:#55acee; }
+
+.b-linkedin{
+  background-color:#0077b5; }
+
+.c-linkedin{
+  color:#0077b5; }
+
+.b-googleplus{
+  background-color:#dd4b39; }
+
+.c-googleplus{
+  color:#dd4b39; }
+
+.b-instagram{
+  background-color:#e4405f; }
+
+.c-instagram{
+  color:#e4405f; }
+
+.b-pinterest{
+  background-color:#bd081c; }
+
+.c-pinterest{
+  color:#bd081c; }
 .clearfix::after{
   content:"";
   display:block;
