@@ -59,10 +59,40 @@ $grid-gutter-width:             30px !default;
 
 // colors
 $colors: (
-        white:                rgb(255, 255, 255),
-        black:                rgb(0, 0, 0),
-        primary:                rgb(51, 195, 240),
-        secondary:              rgb(240, 240, 240),
+        // required base colours
+        white:                  rgb(255, 255, 255),
+        black:                  rgb(17, 17, 17),
+        primary:                  rgb(51, 195, 240),
+        secondary:                rgb(240, 240, 240),
+
+        // A nicer colour palette for the web via http://clrs.cc/
+
+        // Cool
+        aqua:                   rgb(127, 219, 255),
+        blue:                   rgb(0, 116, 217),
+        navy:                   rgb(0, 31, 63),
+        teal:                   rgb(57, 204, 204),
+        green:                  rgb(46, 204, 64),
+        olive:                  rgb(61, 153, 112),
+        lime:                   rgb(1, 255, 112),
+        // Warm
+        yellow:                 rgb(255, 220, 0),
+        orange:                 rgb(255, 133, 27),
+        red:                    rgb(255, 65, 54),
+        fuchsia:                rgb(240, 18, 190),
+        purple:                 rgb(177, 13, 201),
+        maroon:                 rgb(133, 20, 75),
+        // Other Greyscale
+        silver:                 rgb(221, 221, 221),
+        gray:                   rgb(170, 170, 170),
+
+        // Social media, more can be found at https://www.materialui.co/socialcolors
+        facebook:               rgb(59, 89, 153),
+        twitter:                rgb(85, 172, 238),
+        linkedin:               rgb(0, 119, 181),
+        googleplus:             rgb(221, 75, 57),
+        instagram:              rgb(228, 64, 95),
+        pinterest:              rgb(189, 8, 28)
 ) !default;
 
 // defined colors
